--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
-
+server.port = 8090
+spring.application.name=server-cache
+spring.cache.type=redis
+spring.redis.host=192.168.3.37
+spring.redis.port=6379
+spring.redis.username=default
+spring.redis.password=egp12345
